--- a/src/06_ametop_first_report.Rmd
+++ b/src/06_ametop_first_report.Rmd
@@ -9,7 +9,6 @@ output:
 ```{r}
 library(readxl)
 library(ggplot2)
-library(mgcv)
 library(tidyverse)
 ggplot2::theme_set(theme_classic())
 options(repr.plot.width=15, repr.plot.height=7.5)
@@ -19,9 +18,10 @@ options(repr.plot.width=15, repr.plot.height=7.5)
 
 ```{r}
 # Read data
-original_data <- read_excel("../data/Ametop-PE data(new-Alex)(1control 2study).xlsx")
+file_path <- "../data/Ametop-PE data(new-Alex)(1control 2study).xlsx"
+original_data <- read_excel(file_path)
 
-# Save original_data for side effects analysis
+# Save original data for side effects analysis
 data <- original_data
 
 # Remove withdrawn patients
@@ -60,8 +60,8 @@ print(missing_values_summary)
 
 ```{r}
 # Shorten the data
-data$`Reaction to skin puncture` <- gsub("^Slight.*", "Slight Pain", data$`Reaction to skin puncture`)
-data$`Reaction to skin puncture` <- gsub("^Severe.*", "Severe Pain", data$`Reaction to skin puncture`)
+data$`Reaction to skin puncture` <- gsub("^(Slight|Severe).*", "\\1 Pain",
+                                         data$`Reaction to skin puncture`)
 
 # Verify the changes
 table(data$`Reaction to skin puncture`)
@@ -164,17 +164,19 @@ print(table)
 
 ```{r}
 # Perform t-test on full data
-t_test_full <- t.test(data[data$Randomization == 1, ]$`FPS-R score`, 
+t_test_full <- t.test(data[data$Randomization == 1, ]$`FPS-R score`,
                       data[data$Randomization == 2, ]$`FPS-R score`)
 print(t_test_full)
 
 # Perform t-test on subset of data
 data_subset <- data[data$`Match Responses` == 'Yes',]
-t_test_subset <- t.test(data_subset[data_subset$Randomization == 1, ]$`FPS-R score`, 
+t_test_subset <- t.test(data_subset[data_subset$Randomization == 1, ]$`FPS-R score`,
                         data_subset[data_subset$Randomization == 2, ]$`FPS-R score`)
 print(t_test_subset)
 
-# Conclusion: reject null on full data only, if match subset data (with 223-59=164 observations) we do not reject
+# Conclusion: We should only reject the null hypothesis based on the full dataset.
+# If we consider the subset of data with 164 observations (after excluding 59
+# from the original 223), we do not reject the null hypothesis.
 ```
 
 ## Objective 2
@@ -182,7 +184,7 @@ print(t_test_subset)
 # Interaction plots
 
 ```{r}
-#Only use match subset data
+# Only use match subset data
 data = data[data$`Match Responses` == "Yes",]
 
 # Convert continuous variables to categorical factors
@@ -201,10 +203,14 @@ categorical_vars <- c("Sex", "Age_Group", "IV_Attempts_Group", "Needle gauge", "
 for (x_var in categorical_vars) {
   for (trace_var in categorical_vars) {
     if (x_var != trace_var) {  # Avoid plotting a variable against itself
-      interaction.plot(x.factor = data[[x_var]], trace.factor = data[[trace_var]], response = data$`FPS-R score`,
+      interaction.plot(x.factor = data[[x_var]],
+                       trace.factor = data[[trace_var]],
+                       response = data$`FPS-R score`,
                        type = "b",
                        pch = 19,
-                       xlab = x_var, ylab = "FPS-R Score", trace.label = trace_var,
+                       xlab = x_var,
+                       ylab = "FPS-R Score",
+                       trace.label = trace_var,
                        col = c("red", "blue"),
                        lty = 1,
                        legend = TRUE,
@@ -213,7 +219,8 @@ for (x_var in categorical_vars) {
   }
 }
 
-# Significant Interaction : Sex*Age + Sex*`Needle gauge` + Sex*Practitioner + Age*`Needle gauge` + Age*Practitioner + `Number of IV attempts`*Practitioner
+# Significant interactions: Sex * Age + Sex * `Needle gauge` + Sex * Practitioner
+# + Age * `Needle gauge` + Age * Practitioner + `Number of IV attempts` * Practitioner
 ```
 
 # Histograms for FPS-R score
@@ -280,9 +287,9 @@ lm_model_without_interactions <- lm(`FPS-R score` ~ Age + Sex + Practitioner +
                  `Number of IV attempts` + `Needle gauge`, data = data_subset)
 summary(lm_model_without_interactions)
 
-lm_model_with_interactions <- lm(`FPS-R score` ~ Age + Sex + Practitioner + `Number of IV attempts` + `Needle gauge` 
-                + Sex*Age + Sex*`Needle gauge` + Sex*Practitioner
-                + Age*`Needle gauge` + Age*Practitioner + `Number of IV attempts`*Practitioner, 
+lm_model_with_interactions <- lm(`FPS-R score` ~ Age + Sex + Practitioner + `Number of IV attempts`
+                + `Needle gauge` + Sex * Age + Sex * `Needle gauge` + Sex * Practitioner
+                + Age * `Needle gauge` + Age * Practitioner + `Number of IV attempts` * Practitioner, 
                 data = data_subset)
 summary(lm_model_with_interactions)
 ```
@@ -301,28 +308,40 @@ plot(lm_model_with_interactions)
 
 ## Objective 3
 
+# Pie chart draw function with percentages
+
+```{r}
+draw_pie_chart <- function(all_categories, title) {
+  # Count the occurrences of each category
+  category_counts <- table(all_categories)
+
+  # Calculate the percentage for each category
+  percentages <- round(category_counts / sum(category_counts) * 100, 1)
+
+  # Create labels that include both the category name and the percentage
+  labels <- paste(names(category_counts), " - ", percentages, "%", sep="")
+
+  # Create a pie chart with percentages
+  pie(category_counts,
+      main = title,
+      col = rainbow(length(category_counts)),
+      labels = labels,
+      cex = 0.8)
+}
+```
+
 # Pie chart for Observed side effects (No / Yes - Ametop alone / Yes - Ametop + vapocoolant spray)
 
 ```{r}
 # Summarize "Any side effects observed?" column
-side_effects_observed_summary <- table(
+side_effects_observed_summary <- data.frame(
   ifelse(original_data$`Any side effects observed?` == "No", "No Side Effect",
          ifelse(original_data$Randomization == 1, "Side Effect (Ametop alone)",
                 "Side Effect (Ametop + vapocoolant spray)"))
 )
 
-# Calculate percentages
-percentages <- round(100 * side_effects_observed_summary / sum(side_effects_observed_summary), 1)
-
-# Generate labels with percentages
-labels <- paste(names(side_effects_observed_summary), " - ", percentages, "%", sep="")
-
-# Pie Chart for "Any side effects observed?" with percentages
-pie(side_effects_observed_summary,
-    main = "Proportion of Patients with Any Observed Side Effects",
-    col = rainbow(length(side_effects_observed_summary)),
-    labels = labels,
-    cex = 0.65)
+# Create a pie chart for the observed side effects
+draw_pie_chart(side_effects_observed_summary, "Observed Side Effects")
 ```
 
 # Define the categorization function
@@ -349,7 +368,8 @@ categorize_effects <- function(effect) {
 
     # Check for the symptom but exclude if negated
     if (grepl(symptom_pattern, effect_lower)) {
-      negation_pattern <- paste0(pattern_start, symptom_pattern, pattern_middle, symptom_pattern, pattern_end)
+      negation_pattern <- paste0(
+        pattern_start, symptom_pattern, pattern_middle, symptom_pattern, pattern_end)
       if (!grepl(negation_pattern, effect_lower)) {
         identified_categories <- c(identified_categories, category_name)
       }
@@ -365,106 +385,71 @@ categorize_effects <- function(effect) {
 }
 ```
 
+# Categorization function caller
+
+```{r}
+# Apply the categorization function and create a list of categories for each side effect
+categorize_and_print <- function(group_number) {
+  side_effects_data <- data.frame(SideEffects = na.omit(original_data[
+    original_data$Randomization == group_number,]$`Observed side effects`))
+  side_effects_data$Categories <- sapply(side_effects_data$SideEffects,
+                                          categorize_effects, USE.NAMES=FALSE)
+  print(data.frame(side_effects_data$SideEffects,
+                   sapply(side_effects_data$Categories, paste, collapse = ", ")))
+  return(side_effects_data)
+}
+```
+
+# Pie chart draw function for combined categories
+
+```{r}
+draw_pie_chart_combined <- function(side_effects_data, title) {
+  # Combination Categories
+  all_categories <- sapply(side_effects_data$Categories, paste, collapse = " + ")
+
+  # Use the draw_pie_chart function to create the pie chart
+  draw_pie_chart(all_categories, title)
+}
+```
+
+# Pie chart draw function for individual categories
+
+```{r}
+draw_pie_chart_individual <- function(side_effects_data, title) {
+  # Flatten the list into a vector
+  all_categories <- unlist(side_effects_data$Categories)
+
+  # Use the draw_pie_chart function to create the pie chart
+  draw_pie_chart(all_categories, title)
+}
+```
+
 # Pie chart for observed side effects of Ametop alone (Redness, Itching, Pain, Puffiness)
 
 ```{r}
-# Filter out missing values and create a data frame with only the side effects
-side_effects_data_control <- data.frame(SideEffects = na.omit(original_data[original_data$Randomization == 1,]$`Observed side effects`))
+# Get the side effects data for the control group
+side_effects_data_control_group <- categorize_and_print(1)
 
-# Apply the categorization function and create a list of categories for each side effect
-side_effects_data_control$Categories <- sapply(side_effects_data_control$SideEffects, categorize_effects, USE.NAMES=FALSE)
-print(data.frame(side_effects_data_control$SideEffects,
-                 sapply(side_effects_data_control$Categories, paste, collapse = ", ")))
+# Pie Chart for combined categories
+draw_pie_chart_combined(side_effects_data_control_group,
+                        "Combination Side Effects Distribution - Ametop alone")
 
-# Pie Chart 1
-# Combination Categories
-all_combination_categories_ametop_alone <- sapply(side_effects_data_control$Categories, paste, collapse = " + ")
-
-# Count the occurrences of each category
-combination_category_counts_ametop_alone <- table(all_combination_categories_ametop_alone)
-
-# Calculate the percentage for each category
-combination_category_percentages <- round(combination_category_counts_ametop_alone / sum(combination_category_counts_ametop_alone) * 100, 1)
-
-# Create labels that include both the category name and the percentage
-combination_labels <- paste(names(combination_category_counts_ametop_alone), " - ", combination_category_percentages, "%", sep="")
-
-# Create a pie chart with percentages
-pie(combination_category_counts_ametop_alone,
-    main = "Combination Side Effects Distribution - Ametop alone",
-    col = rainbow(length(combination_category_counts_ametop_alone)),
-    labels = combination_labels,
-    cex = 0.8)
-
-# Pie Chart 2
-# Flatten the list into a vector
-all_categories_ametop_alone <- unlist(side_effects_data_control$Categories)
-
-# Count the occurrences of each category
-category_counts_ametop_alone <- table(all_categories_ametop_alone)
-
-# Calculate the percentage for each category
-percentages <- round(category_counts_ametop_alone / sum(category_counts_ametop_alone) * 100, 1)
-
-# Create labels that include both the category name and the percentage
-individual_labels <- paste(names(category_counts_ametop_alone), " - ", percentages, "%", sep="")
-
-# Create a pie chart with percentages
-pie(category_counts_ametop_alone,
-    main = "Individual Side Effects Distribution - Ametop alone",
-    col = rainbow(length(category_counts_ametop_alone)),
-    labels = individual_labels,
-    cex = 0.8)
+# Pie Chart for individual categories
+draw_pie_chart_individual(side_effects_data_control_group,
+                          "Individual Side Effects Distribution - Ametop alone")
 ```
 
 # Pie chart for observed side effects of Ametop + Spray (Redness, Itching, Pain, Puffiness)
 
 ```{r}
-# Filter out missing values and create a data frame with only the side effects
-side_effects_data_study_group <- data.frame(SideEffects = na.omit(original_data[original_data$Randomization == 2,]$`Observed side effects`))
+# Get the side effects data for the study group
+side_effects_data_study_group <- categorize_and_print(2)
 
-# Apply the categorization function and create a list of categories for each side effect
-side_effects_data_study_group$Categories <- sapply(side_effects_data_study_group$SideEffects, categorize_effects, USE.NAMES=FALSE)
-print(data.frame(side_effects_data_study_group$SideEffects,
-                 sapply(side_effects_data_study_group$Categories, paste, collapse = ", ")))
+# Pie Chart for combined categories
+draw_pie_chart_combined(side_effects_data_study_group,
+                        "Combination Side Effects Distribution - Ametop + Spray")
 
-# Pie Chart 1
-# Combination Categories
-all_combination_categories_ametop_spray <- sapply(side_effects_data_study_group$Categories, paste, collapse = " + ")
-
-# Count the occurrences of each category
-combination_category_counts_ametop_spray <- table(all_combination_categories_ametop_spray)
-
-# Calculate the percentage for each category
-combination_category_percentages <- round(combination_category_counts_ametop_spray / sum(combination_category_counts_ametop_spray) * 100, 1)
-
-# Create labels that include both the category name and the percentage
-combination_labels <- paste(names(combination_category_counts_ametop_spray), " - ", combination_category_percentages, "%", sep="")
-
-# Create a pie chart with percentages
-pie(combination_category_counts_ametop_spray,
-    main = "Combination Side Effects Distribution - Ametop + Spray",
-    col = rainbow(length(combination_category_counts_ametop_spray)),
-    labels = combination_labels,
-    cex = 0.8)
-
-# Pie Chart 2
-# Flatten the list into a vector
-all_categories_ametop_spray <- unlist(side_effects_data_study_group$Categories)
-
-# Count the occurrences of each category
-category_counts_ametop_spray <- table(all_categories_ametop_spray)
-
-# Calculate the percentage for each category
-percentages <- round(category_counts_ametop_spray / sum(category_counts_ametop_spray) * 100, 1)
-
-# Create labels that include both the category name and the percentage
-individual_labels <- paste(names(category_counts_ametop_spray), " - ", percentages, "%", sep="")
-
-# Create a pie chart with percentages
-pie(category_counts_ametop_spray,
-    main = "Individual Side Effects Distribution - Ametop + Spray",
-    col = rainbow(length(category_counts_ametop_spray)),
-    labels = individual_labels,
-    cex = 0.8)
+# Pie Chart for individual categories
+draw_pie_chart_individual(side_effects_data_study_group,
+                          "Individual Side Effects Distribution - Ametop + Spray")
 ```
